--- a/localisation/TD_01_flavour_voitak_l_english.yml
+++ b/localisation/TD_01_flavour_voitak_l_english.yml
@@ -16,3 +16,21 @@
  nai_dragon_artillery_desc: "Hengtuan artillery was brought to Voitak in the tenth century, mostly as a novelty. As the military innovations spread through Zimahei, it soon also reached us, giving those being able to afford the best guns an enormous edge over their enemies. As the demand grew, domestic production was also expanded, taking advantage of the cheap metals imported from Khemdan."
  nai_unifiers_of_bac_wong: "Unifiers of Bac Wong"
  nai_unifiers_of_bac_wong_desc: "As the southern empire was slowly expanding its influence, the Nai states have been clashing for domination, destroying themselves in the process, with many folding under the pressure of the empire. Some states, however, managed to conquer their neighbors and establish kingdoms able to rival Can Khu Tat, however for true domination all people of Bac Wong must be united once again, like in the days of Man Wei."
+
+ bai_group_ideas: "Bài Minor Ideas"
+ bai_group_ideas_bonus: "Bài Minor Ambition"
+ bai_group_ideas_start: "Bài Minor Traditions"
+ bai_seafaring_tradition: "Seafaring Traditions"
+ bai_seafaring_tradition_desc: "Since ancient times ta-trâi people have traded with their neighbors, with merchants often leading the diplomacy between Voitak and Cakrawalunian archipelago. As the time passed, naval force became crucial for survival for the coastal states, serving not only in times of war, but also propagating the influence."
+ bai_thboiran_mercenaries: "Thboiran Mercenaries"
+ bai_thboiran_mercenaries_desc: "Many thboirans for a long time have lived in isolated communities, but due to the imperial pressure many of them opened their borders. Now countless men and women are willing to risk their lives oversea to earn coin working for us, often for a far cheaper price than other swords for hire."
+ bai_anti_piracy_measures: "Anti-piracy Measures"
+ bai_anti_piracy_measures_desc: "Piracy has always been a problem around these parts. Many pirate havens and hideouts operate across the tropical coasts and various islands, raiding passing merchants and travelers. To counteract this, all ships were additionaly reinforced and often accompanied by supporting vessels meant to hold archers and later additional cannons."
+ bai_pasmangalan_trade: "Pasmangalan Trade"
+ bai_pasmangalan_trade_desc: "There are only two ways to reach Maisetra through land. One way is to go through Bkuslcuht and accept various tolls and taxes, not even mentioning the treacherous mountains. The other way leads through Pasmangalan rainforest, where, despite it being incredibely inhospitable and dangerous, is still cheaper than travelling south."
+ bai_do_su_vang_porcelain: "Do Su Vang Porcelain"
+ bai_do_su_vang_porcelain_desc: "Characterized by its floral patterns, the golden porcelain of southern Voitak is famous not only in the region, but also popular among Visparayan and Hestani nobles. While it was historically produced mostly by the inland craftsmen, it was soon adopted by many of our own, taking advantage of the growing demand."
+ bai_curtailed_aristocracy: "Curtailed Aristocracy"
+ bai_curtailed_aristocracy_desc: "The nobles of Voitak were always brutal, ready for war and authoritarian, trying to conserve as much power within their own caste as possible. After many reforms in Cang Phia Tay, they were finally brought to their knees and soon other states started to rebel against their overlords. Despite them still being somewhat important in the affairs of the state, their influence, especially on the army, was greatly diminished."
+ bai_colonizing_spice_islands: "Colonizing Spice Islands"
+ bai_colonizing_spice_islands_desc: "The islands south of Cakrawalunia have been mostly settled by small tribes, often not extending their reach beyond their villages. Thankfully, with our growing wealth and influence, supported by new innovations helping us maintain contact with these islands, we can set up outpost to export the valuable wood, spices and incense."
