event triggering mechanism - pal

--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  aspect_bonus_effect_tt: "This may have a §Ybonus effect§!."
- icon_aspect_salist_tt: "This teaching is shared by §YSalists§!. Having at least 2 salist teachings will give us salist event during celebration"
- icon_aspect_chapterist_tt: "This teaching is shared by §YChapterists§!. Having at least 2 chapterist teachings will give us chapterist event during celebration"
+ icon_aspect_salist_tt: "This teaching is shared by §YSalists§!. Having at least 2 salist teachings will give us a Salist event focused on national bonuses during celebration"
+ icon_aspect_chapterist_tt: "This teaching is shared by §YChapterists§!. Having at least 2 chapterist teachings will give us Chapterist event during focused on foreign bonuses during celebration"
  
  palmisianism_sun_solstice_festival_sal_aspect: "Sun Solstice Festival"
  desc_palmisianism_sun_solstice_festival_sal_aspect: "£mil£ §YAspect§!\n§YCelebrate Festival§! gives us §G+1§! year worth of manpower.\n\nDuring summer many cities and villages organise festivals dedicated to victories of Sal, it motivates our young populace to join military to also gain glory."
