Xi and Heisean map rework

--- a/localisation/TD_01_Flavour_Heisean_l_english.yml
+++ b/localisation/TD_01_Flavour_Heisean_l_english.yml
@@ -18,7 +18,7 @@
  heisean_huerun_expedition_warlord_desc: "The Huerun forest across the Nalkaisan mountains was always inhabited by various tribes willing to trade and sometimes even able to send tribute to the Heisen Empire. As times went on, rumors of gold, metals and rare animals encouraged many to attempt to explore and construct the maps of the region."
  pulunead_ideas: "Heisen Warlord Ideas"
  pulunead_ideas_bonus: "Heisen Warlord Ambition"
- pulunead_ideas_start: "Pulunead Traditions"
+ pulunead_ideas_start: "Puluneda Traditions"
  banasan_ideas: "Heisen Warlord Ideas"
  banasan_ideas_bonus: "Heisen Warlord Ambition"
  banasan_ideas_start: "Banasan Traditions"
