--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -620,7 +620,7 @@
  western_lameng_area: "Western Lameng"
  banasan_area: "Banasan"
  gunseong_area: "Gunseong"
- pulunead_area: "Pulunead"
+ pulunead_area: "Puluneda"
  golunjag_area: "Golunjag"
  bashipista_area: "Bashipista"
  zimahei_estuary_area: "Zimahei Delta"
