--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -937,8 +937,8 @@
  CHM_ADJ: "Chamnami"
  GUN: "Gunseong"
  GUN_ADJ: "Gunseongi"
- PUL: "Pulunead"
- PUL_ADJ: "Puluneadi"
+ PUL: "Puluneda"
+ PUL_ADJ: "Pulunedani"
  HEI: "Heisean"
  HEI_ADJ: "Heisen"
 
@@ -967,8 +967,8 @@
  MMM_ADJ: "Mauan"
  SHA: "Shajinkhör"
  SHA_ADJ: "Shajinkhöri"
- HNS: "Huns"
- HNS_ADJ: "Huns"
+ HNS: "Hun"
+ HNS_ADJ: "Hun"
  KHT: "Khütiendai"
  KHT_ADJ: "Khütiendaichis"
 
@@ -1626,3 +1626,6 @@
  BCW_con_seu_ADJ: "Seuan"
  BCW_da_xanh: "Xanh Vuong"
  BCW_da_xanh_ADJ: "Xanhian"
+
+ KYI: "Kyin Sir Rlun"
+ KYI_ADJ: "Kyin"
