--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1852,7 +1852,7 @@
  PROV1851: "Dantaku"
  PROV1852: "Gyeyun"
  PROV1853: "Apnaq"
- PROV1854: "Yag"
+ PROV1854: "Hu"
  PROV1855: "Yapiniso"
  PROV1856: "Tsaecaax"
  PROV1857: "Donakekce"
@@ -4872,17 +4872,17 @@
  PROV4871: "4871"
  PROV4872: "4872"
  PROV4873: "4873"
- PROV4874: "4874"
- PROV4875: "4875"
- PROV4876: "4876"
- PROV4877: "4877"
- PROV4878: "4878"
- PROV4879: "4879"
- PROV4880: "4880"
- PROV4881: "4881"
- PROV4882: "4882"
- PROV4883: "4883"
- PROV4884: "4884"
+ PROV4874: "Riboxian"
+ PROV4875: "Julga"
+ PROV4876: "Ziyun"
+ PROV4877: "Zaishan"
+ PROV4878: "Ziyun"
+ PROV4879: "Youfan"
+ PROV4880: "Xishan"
+ PROV4881: "Xiaoshu"
+ PROV4882: "Ziyun"
+ PROV4883: "Huimihan"
+ PROV4884: "Banlei"
  PROV4885: "4885"
  PROV4886: "4886"
  PROV4887: "4887"
