--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -132,12 +132,14 @@
  GREAT_TOG_ADJ: "Great Tong"
  GREAT_LIN: "Great Lin"
  GREAT_LIN_ADJ: "Great Lin"
- GREAT_HNS: "Great Huns"
- GREAT_HNS_ADJ: "Great Huns"
+ GREAT_HNS: "Great Hun"
+ GREAT_HNS_ADJ: "Great Hun"
  GREAT_CAI: "Great Cai"
  GREAT_CAI_ADJ: "Great Caian"
  GREAT_MMM: "Great Mau"
  GREAT_MMM_ADJ: "Great Mauan"
+ GREAT_KAI: "Great Kai"
+ GREAT_KAI_ADJ: "Great Kai"
 
  embrace_zheng_decision_title: "Embrace Hengtuan Religion"
  embrace_zheng_decision_desc: "We lived next to Hengtuans for generations. Maybe it's time to convert to their faith?"
