--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -623,8 +623,9 @@
  pulunead_area: "Puluneda"
  golunjag_area: "Golunjag"
  bashipista_area: "Bashipista"
+ kenishe_area: "Kenishe"
  zimahei_estuary_area: "Zimahei Delta"
- caizhu_area: "Caizhu"
+ caizhu_area: "Beiguo"
  lin_area: "Lin"
  nabanji_area: "Nabanji"
  doqiashu_area: "Doqiashu"
