--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -71,7 +71,8 @@
  bugtang_region: "Bugtang"
  weixiao_region: "Weixiao"
  zimahei_valley_region: "Zimahei Valley"
- greater_heisean_region: "Greater Heisean"
+ eoduunso_region: "Eoduunso"
+ songyu_region: "Songyu"
  west_sahilan_coast_ocean: "West Sahilan Coast"
  eastern_chantlian_coast_ocean: "Northeastern Amin Ocean"
  dasenli_region: "Dasenli"
