--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -12,7 +12,7 @@
  central_steppe_superregion: "Central Steppe"
  samadia_superregion: "Samadia"
  northern_venatia_superregion: "Northern Venatia"
- bunelisulia_superregion: "Bunelisulia"
+ bunelisulia_superregion: "Bavgania"
  hengtua_superregion: "Hengtua"
  cakrawalunia_superregion: "Cakrawalunia"
  south_pemenia_superregion: "South Pemenia"
