heisean work and rework

--- a/localisation/TD_01_Flavour_Heisean_l_english.yml
+++ b/localisation/TD_01_Flavour_Heisean_l_english.yml
@@ -25,6 +25,9 @@
  chamnam_ideas: "Heisen Warlord Ideas"
  chamnam_ideas_bonus: "Heisen Warlord Ambition"
  chamnam_ideas_start: "Chamnam Traditions"
+ yumatoji_ideas: "Heisen Warlord Ideas"
+ yumatoji_ideas_bonus: "Heisen Warlord Ambition"
+ yumatoji_ideas_start: "Yumatoji Traditions"
 
  heisean_ideas: "Heisen Ideas"
  heisean_ideas_bonus: "Heisen Ambition"
@@ -43,3 +46,9 @@
  heisean_new_badagang_academy_desc: "Badagang set to be the new seat of the imperial court. The city of merchants and fishermen quickly grew in size and with this new demands arose. More and more young men were willing to join the ranks of the navy, which led to a few local oligarchs to fund a new maritime academy."
  heisean_huerun_expedition: "Huerun Expeditions"
  heisean_huerun_expedition_desc: "The Huerun forest across the Nalkaisan mountains was always inhabited by various tribes willing to trade and sometimes even able to send tribute to the Heisen Empire. As times went on, rumors of gold, metals and rare animals encouraged many to attempt to explore and construct the maps of the region."
+
+ heisen_warlord_reform: "Bungi Warlord"
+ heisen_warlord_reform_desc: "The sudden death of emperor Suli Yeon in 1439 has caused the empire to be torn apart by various lords and warmongers, trying to take the glimmering throne for themselves."
+ TOJI: "Toji"
+ heisen_empire_reform: "Heisen Empire"
+ heisen_empire_reform_desc: "Continuing the two thousand years old legacy, the new Heisen empire focuses on exterting maritime influence over nearby states and keeping internal landowners in check."
