--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -90,6 +90,8 @@
  GREAT_TSOI_HAI: "Great Tsoi-Hai"
  ZHUQUAN: "Zhuquan"
  GREAT_ZHUQUAN: "Great Zhuquan"
+ TEMPLE: "Temple"
+ HOLY_KINGDOM: "Heavenly Kingdom"
 
 
  GREAT_GUI: "Great Gui"
