--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -92,6 +92,7 @@
  GREAT_ZHUQUAN: "Great Zhuquan"
  TEMPLE: "Temple"
  HOLY_KINGDOM: "Heavenly Kingdom"
+ SHANZI: "Shanzi"
 
 
  GREAT_GUI: "Great Gui"
