--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -616,8 +616,8 @@
  quatrara_area: "Quatrara"
 
  tonghe_area: "Tonghe"
- eastern_lameng_area: "Eastern Lameng"
- western_lameng_area: "Western Lameng"
+ eastern_lameng_area: "Seogyeong"
+ western_lameng_area: "Laubin"
  banasan_area: "Banasan"
  gunseong_area: "Gunseong"
  pulunead_area: "Puluneda"
