--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -74,7 +74,7 @@
  henling_coast_tradenode: "Henling Coast"
  xilei_tradenode: "Beimen"
  eoduunso_tradenode: "Eoduunso"
- heisean_tradenode: "Chamnam"
+ heisean_tradenode: "Yeolbada"
  caizhu_tradenode: "Caizhu"
  huangchan_tradenode: "Paau"
  xun_tradenode: "Densheng"
