--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -2596,7 +2596,7 @@
  PROV_ADJ2595: "2595"
  PROV_ADJ2596: "2596"
  PROV_ADJ2597: "Gongjag Strait"
- PROV_ADJ2598: "Chamnam Bay"
+ PROV_ADJ2598: "Yeolbada Bay"
  PROV_ADJ2599: "Beidao Coast"
  PROV_ADJ2600: "Desheng Bay"
  PROV_ADJ2601: "2601"
