--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2596,7 +2596,7 @@
  PROV2595: "Yuknepoye"
  PROV2596: "Kaoriripi"
  PROV2597: "Gongjag Strait"
- PROV2598: "Chamnam Bay"
+ PROV2598: "Yeolbada Bay"
  PROV2599: "Beidao Coast"
  PROV2600: "Desheng Bay"
  PROV2601: "Eyaekwa"
