--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -293,8 +293,8 @@
  #ab_france_fire_damage: "French Musketeers"
  #ab_dutch_anti_corruption: "Dutch Officials"
  ab_sweden_manpower: "Swedish Recruitment"
- ab_reformed_shou_cavalry: "Manchu Banners"
- ab_reformed_shou_cavalry_tt: "§G+50%§! Possible Manchu banners if available"
+ ab_manchu_banner: "Manchu Banners"
+ ab_manchu_banner_tt: "§G+50%§! Possible Manchu banners if available
  ab_allow_anti_revolutionary_zeal: "Anti-Revolutionary Zeal"
  ab_napoleonic_warfare: "Napoleonic Warfare"
  ab_force_march: "Improved Force March"
@@ -381,7 +381,7 @@
  BANNER_NONE_AVAIL: "There are not enough $CULTURE$ People in full cores within the $NAME$ to raise any banners."
  BANNER_ALL_RAISED: "$NAME$ cannot raise more banners, as there are already $CURR|Y$ raised.\n"
  BANNER_TOO_HIGH_CORRUPTION: "Raising this banner would increase our corruption by $VAL|R$, taking us beyond 100."
- RAISE_reformed_shou_cavalryS: "Raise Banners"
+ RAISE_MANCHU_BANNERS: "Raise Banners"
  BANNER_TXT: "$CURR|Y$ of $ALLOW|Y$"
  BANNERS_FROM_TT: "§YBanners Forcelimit§!\nThis is the amount of current and possible banners our nation can have.\nBanners cost Corruption to raise and have higher Discipline than normal troops.\n\nBanners are raised from the state's full core provinces with Manchu culture.\n\n$NAME$ provide $AMOUNT|Y$ Force Limit of Banners due to the development in:\n"
  STATE_CORRUPTION_INC: "Raising $RAISED|Y$ regiments as banners will increase corruption by $INC$.\n"
