Southern Ta-Trai Prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3924,7 +3924,7 @@
  PROV3923: "Khuyehuan"
  PROV3924: "Tsuagcog"
  PROV3925: "Huabxeeb"
- PROV3926: "3926"
+ PROV3926: "Tlung Then"
  PROV3927: "Hlobvog"
  PROV3928: "Phaujvog"
  PROV3929: "Txumzooj"
@@ -4163,7 +4163,7 @@
  PROV4162: "4162"
  PROV4163: "4163"
  PROV4164: "4164"
- PROV4165: "4165"
+ PROV4165: "La Quen"
  PROV4166: "4166"
  PROV4167: "4167"
  PROV4168: "4168"
@@ -4199,39 +4199,39 @@
  PROV4198: "Thung Nong"
  PROV4199: "Mon Nao"
  PROV4200: "Tha Ao"
- PROV4201: "4201"
- PROV4202: "4202"
- PROV4203: "4203"
- PROV4204: "4204"
- PROV4205: "4205"
+ PROV4201: "Tlu Tha"
+ PROV4202: "Wa Xo"
+ PROV4203: "Ket Dien"
+ PROV4204: "Danh Phan"
+ PROV4205: "Chi Lon"
  PROV4206: "4206"
  PROV4207: "4207"
- PROV4208: "4208"
- PROV4209: "4209"
+ PROV4208: "Ngo Kha Cut"
+ PROV4209: "Long To"
  PROV4210: "Cang Phia Nam"
  PROV4211: "Moi Cang"
- PROV4212: "4212"
+ PROV4212: "Kel Ao"
  PROV4213: "Thanh Pho Song"
- PROV4214: "4214"
- PROV4215: "4215"
+ PROV4214: "Pam Nhuc"
+ PROV4215: "Kha Nhal"
  PROV4216: "Cang Phia Tay"
- PROV4217: "4217"
- PROV4218: "4218"
- PROV4219: "4219"
- PROV4220: "4220"
- PROV4221: "4221"
- PROV4222: "4222"
- PROV4223: "4223"
- PROV4224: "4224"
- PROV4225: "4225"
- PROV4226: "4226"
- PROV4227: "4227"
+ PROV4217: "Ang Dong"
+ PROV4218: "Keu Coi"
+ PROV4219: "Quy Ngai"
+ PROV4220: "Doc Kha"
+ PROV4221: "Hong Wang"
+ PROV4222: "Dal To"
+ PROV4223: "Ainh"
+ PROV4224: "Pang Phang"
+ PROV4225: "La Dau"
+ PROV4226: "Ngin Hon"
+ PROV4227: "Ngo Tha"
  PROV4228: "Dahn Tlong"
- PROV4229: "4229"
+ PROV4229: "An Pac"
  PROV4230: "Dal Li"
  PROV4231: "A Can"
- PROV4232: "4232"
- PROV4233: "4233"
+ PROV4232: "Am Dang"
+ PROV4233: "Tlu Cot"
  PROV4234: "4234"
  PROV4235: "4235"
  PROV4236: "4236"
@@ -4246,8 +4246,8 @@
  PROV4245: "4245"
  PROV4246: "4246"
  PROV4247: "4247"
- PROV4248: "4248"
- PROV4249: "4249"
+ PROV4248: "Ho Tlo"
+ PROV4249: "Dong Tha Toa"
  PROV4250: "4250"
  PROV4251: "4251"
  PROV4252: "4252"
