Pipobsa Thboira Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4232,8 +4232,8 @@
  PROV4231: "A Can"
  PROV4232: "Am Dang"
  PROV4233: "Tlu Cot"
- PROV4234: "4234"
- PROV4235: "4235"
+ PROV4234: "Garapgal"
+ PROV4235: "Jnaucancar"
  PROV4236: "4236"
  PROV4237: "4237"
  PROV4238: "4238"
@@ -4242,28 +4242,28 @@
  PROV4241: "4241"
  PROV4242: "4242"
  PROV4243: "4243"
- PROV4244: "4244"
+ PROV4244: "Pok"
  PROV4245: "4245"
- PROV4246: "4246"
+ PROV4246: "Jalan"
  PROV4247: "4247"
  PROV4248: "Ho Tlo"
  PROV4249: "Dong Tha Toa"
- PROV4250: "4250"
- PROV4251: "4251"
- PROV4252: "4252"
- PROV4253: "4253"
- PROV4254: "4254"
- PROV4255: "4255"
- PROV4256: "4256"
- PROV4257: "4257"
- PROV4258: "4258"
- PROV4259: "4259"
- PROV4260: "4260"
- PROV4261: "4261"
- PROV4262: "4262"
- PROV4263: "4263"
- PROV4264: "4264"
- PROV4265: "4265"
+ PROV4250: "Danhum"
+ PROV4251: "Risarmma"
+ PROV4252: "Manudharmma"
+ PROV4253: "Knar"
+ PROV4254: "Camlak"
+ PROV4255: "Toltvar"
+ PROV4256: "Prakkpran"
+ PROV4257: "Nanakirtti"
+ PROV4258: "Ranoca"
+ PROV4259: "Coscal"
+ PROV4260: "Jatudak"
+ PROV4261: "Dandaneh"
+ PROV4262: "Mratanmoy"
+ PROV4263: "Lunlehv"
+ PROV4264: "Vudhavara"
+ PROV4265: "Vuyukpah"
  PROV4266: "Kanakadvar"
  PROV4267: "Vivlen"
  PROV4268: "Dolvam"
