Rest of Thboira Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1147,7 +1147,7 @@
  PROV1146: "Subat"
  PROV1147: "Xatani" #dangerous pass
  PROV1148: "Azgur"
- PROV1149: "1149"
+ PROV1149: "Kamayarama"
  PROV1150: "Rakaban"
  PROV1151: "Janlhary"
  PROV1152: "Qaravakh"
@@ -4267,45 +4267,45 @@
  PROV4266: "Kanakadvar"
  PROV4267: "Vivlen"
  PROV4268: "Dolvam"
- PROV4269: "4269"
+ PROV4269: "Kanday"
  PROV4270: "Kvunvam"
- PROV4271: "4271"
- PROV4272: "4272"
- PROV4273: "4273"
- PROV4274: "4274"
- PROV4275: "4275"
- PROV4276: "4276"
- PROV4277: "4277"
- PROV4278: "4278"
- PROV4279: "4279"
- PROV4280: "4280"
- PROV4281: "4281"
- PROV4282: "4282"
- PROV4283: "4283"
- PROV4284: "4284"
- PROV4285: "4285"
- PROV4286: "4286"
- PROV4287: "4287"
- PROV4288: "4288"
- PROV4289: "4289"
- PROV4290: "4290"
- PROV4291: "4291"
- PROV4292: "4292"
- PROV4293: "4293"
- PROV4294: "4294"
- PROV4295: "4295"
- PROV4296: "4296"
- PROV4297: "4297"
- PROV4298: "4298"
- PROV4299: "4299"
- PROV4300: "4300"
- PROV4301: "4301"
- PROV4302: "4302"
- PROV4303: "4303"
- PROV4304: "4304"
- PROV4305: "4305"
- PROV4306: "4306"
- PROV4307: "4307"
+ PROV4271: "Kandip"
+ PROV4272: "Tamran"
+ PROV4273: "Godavam"
+ PROV4274: "Devasena"
+ PROV4275: "Prukvar"
+ PROV4276: "Rokvam"
+ PROV4277: "Kanday"
+ PROV4278: "Vanay"
+ PROV4279: "Kanmen"
+ PROV4280: "Ksunklah"
+ PROV4281: "Trayonah"
+ PROV4282: "Pnakay"
+ PROV4283: "Dallanvam"
+ PROV4284: "Choyvar"
+ PROV4285: "Chokvam"
+ PROV4286: "Guslah"
+ PROV4287: "Dapdip"
+ PROV4288: "Padminay"
+ PROV4289: "Planvar"
+ PROV4290: "Vinayagupta"
+ PROV4291: "Ktomay"
+ PROV4292: "Naulah"
+ PROV4293: "Divasavar"
+ PROV4294: "Jaunjay"
+ PROV4295: "Candraka"
+ PROV4296: "Garapay"
+ PROV4297: "Kumaradat"
+ PROV4298: "Pdoray"
+ PROV4299: "Pamjuhlah"
+ PROV4300: "Manavar"
+ PROV4301: "Rangadatta"
+ PROV4302: "Laivar"
+ PROV4303: "Valacandra"
+ PROV4304: "Nakvam"
+ PROV4305: "Camkopay"
+ PROV4306: "Gurudevavar"
+ PROV4307: "Kpailah"
  PROV4308: "Tisnad"
  PROV4309: "Rarf"
  PROV4310: "Abašan"
