--- a/localisation/TD_01_Flavour_Heisean_l_english.yml
+++ b/localisation/TD_01_Flavour_Heisean_l_english.yml
@@ -3,7 +3,7 @@
  gunseong_ideas_bonus: "Heisen Warlord Ambition"
  gunseong_ideas_start: "Gunseong Traditions"
  heisean_bungi_wars_warlord: "Bungi Wars"
- heisean_bungi_wars_warlord_desc: "Bungi Wars is the name given to a series of conflicts happening since the end of the fourteenth century, caused by the various warlords rising to power alongside the diminishing power of the imperial court. Technological advancements and increased conscription and taxation led to a greater militarization of the Heisen society."
+ heisean_bungi_wars_warlord_desc: "Bungi Wars is the name given to a series of conflicts happening since the death of emperor Suli Yeon, caused by the various warlords rising to power alongside the diminishing power of the imperial court. Technological advancements and increased conscription and taxation led to a greater militarization of the Heisen society."
  heisean_buheung_warlord: "Buheung"
  heisean_buheung_warlord_desc: "Rebirth of the culture and innovation in the Heisen lands after the turbulent period of Bungi wars was so great, that even foreign scholars are in awe at the rate of our recovery. Rural development, patronization of art and distant expeditions filled the royal coffins for decades to come."
  heisean_eastern_trading_warlord: "Eastern Winds"
@@ -52,3 +52,75 @@
  TOJI: "Toji"
  heisen_empire_reform: "Heisen Empire"
  heisen_empire_reform_desc: "Continuing the two thousand years old legacy, the new Heisen empire focuses on exterting maritime influence over nearby states and keeping internal landowners in check."
+
+
+ disaster_bungi_wars: "Bungi Wars"
+ heisean_banditry_rampant: "Rampant Banditry"
+ desc_heisean_banditry_rampant: "The countryside is controlled by various groups of bandits holding the population hostage."
+ decision_HEI_kill_bandits_title: "Kill banndits"
+ decision_HEI_kill_bandits_desc: "REPLACE_ME"
+ enlightened_heisen_empire_reform: "Enlightened Empire"
+ enlightened_heisen_empire_reform_desc: "Through divine elections the empire will prosper until the end of times."
+ merc_heisen_bandits: "Heisen Bandits"
+
+ heisean.0.t: "REPLACE_ME"
+ heisean.0.desc: "REPLACE_ME"
+ until_dealt_with_tt: "REPLACE_ME"
+ heisean.0.a: "REPLACE_ME"
+ heisean.1.t: "REPLACE_ME"
+ heisean.1.desc: "REPLACE_ME"
+ heisean.1.a: "REPLACE_ME"
+ heisean.1.b: "REPLACE_ME"
+ heisean.1.c: "REPLACE_ME"
+ heisean.2.t: "REPLACE_ME"
+ heisean.2.desc: "REPLACE_ME"
+ heisean.2.a: "REPLACE_ME"
+ cant_unify_heisean_tt: "REPLACE_ME"
+ heisean.2.b: "REPLACE_ME"
+ heisean.101.t: "REPLACE_ME"
+ heisean.101.desc: "REPLACE_ME"
+ heisean.101.a: "REPLACE_ME"
+ heisean.102.t: "REPLACE_ME"
+ heisean.102.desc: "REPLACE_ME"
+ heisean_bell_metal_cannons: "REPLACE_ME"
+ desc_heisean_bell_metal_cannons: "REPLACE_ME"
+ heisean.102.a: "REPLACE_ME"
+ heisean.102.b: "REPLACE_ME"
+ heisean_pious_warlord: "REPLACE_ME"
+ desc_heisean_pious_warlord: "REPLACE_ME"
+ heisean.103.t: "REPLACE_ME"
+ heisean.103.desc: "REPLACE_ME"
+ heisean.103.a: "REPLACE_ME"
+ heisean.103.b: "REPLACE_ME"
+ heisean.104.t: "REPLACE_ME"
+ heisean.104.desc: "REPLACE_ME"
+ heisean.104.a: "REPLACE_ME"
+ heisean.104.b: "REPLACE_ME"
+ heisean.105.t: "REPLACE_ME"
+ heisean.105.desc: "REPLACE_ME"
+ heisean.105.a: "REPLACE_ME"
+ heisean.105.b: "REPLACE_ME"
+ heisean.106.t: "REPLACE_ME"
+ heisean.106.desc: "REPLACE_ME"
+ heisean.106.a: "REPLACE_ME"
+ heisean.106.b: "REPLACE_ME"
+ heisean.107.t: "REPLACE_ME"
+ heisean.107.desc: "REPLACE_ME"
+ heisean.107.a: "REPLACE_ME"
+ heisean.107.b: "REPLACE_ME"
+ heisean.108.t: "REPLACE_ME"
+ heisean.108.desc: "REPLACE_ME"
+ heisean.108.a: "REPLACE_ME"
+ heisean.108.b: "REPLACE_ME"
+ heisean.108.c: "REPLACE_ME"
+ heisean.109.t: "REPLACE_ME"
+ heisean.109.desc: "REPLACE_ME"
+ heisean.109.a: "REPLACE_ME"
+ heisean.109.b: "REPLACE_ME"
+ heisean.110.c: "REPLACE_ME"
+ heisean.110.t: "REPLACE_ME"
+ heisean.110.desc: "REPLACE_ME"
+ heisean.110.a: "REPLACE_ME"
+ heisean.200.t: "REPLACE_ME"
+ heisean.200.desc: "REPLACE_ME"
+ heisean.200.a: "REPLACE_ME"
