--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1635,3 +1635,8 @@
  KAI_ADJ: "Kai"
  YUM: "Yumatoji"
  YUM_ADJ: "Yumae"
+
+ PHN: "Phankgar"
+ PHN_ADJ: "Phankgari"
+ MIK: "Miekhok"
+ MIK_ADJ: "Miekhokian"
