--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -142,7 +142,9 @@
  GREAT_MMM: "Great Mau"
  GREAT_MMM_ADJ: "Great Mauan"
  GREAT_KAI: "Great Kai"
- GREAT_KAI_ADJ: "Great Kai"
+ GREAT_KAI_ADJ: "Great Kai" 
+ GREAT_GOE: "Great Goe"
+ GREAT_GOE_ADJ: "Great Goe"
 
  embrace_zheng_decision_title: "Embrace Hengtuan Religion"
  embrace_zheng_decision_desc: "We lived next to Hengtuans for generations. Maybe it's time to convert to their faith?"
