Not!Laotian province loc

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -4111,62 +4111,62 @@
  PROV_ADJ4110: "4110"
  PROV_ADJ4111: "4111"
  PROV_ADJ4112: "4112"
- PROV_ADJ4113: "4113"
- PROV_ADJ4114: "4114"
- PROV_ADJ4115: "4115"
- PROV_ADJ4116: "4116"
- PROV_ADJ4117: "4117"
- PROV_ADJ4118: "4118"
- PROV_ADJ4119: "4119"
- PROV_ADJ4120: "4120"
- PROV_ADJ4121: "4121"
- PROV_ADJ4122: "4122"
- PROV_ADJ4123: "4123"
- PROV_ADJ4124: "4124"
- PROV_ADJ4125: "4125"
- PROV_ADJ4126: "4126"
- PROV_ADJ4127: "4127"
- PROV_ADJ4128: "4128"
- PROV_ADJ4129: "4129"
- PROV_ADJ4130: "4130"
- PROV_ADJ4131: "4131"
- PROV_ADJ4132: "4132"
- PROV_ADJ4133: "4133"
- PROV_ADJ4134: "4134"
- PROV_ADJ4135: "4135"
- PROV_ADJ4136: "4136"
- PROV_ADJ4137: "4137"
+ PROV_ADJ4113: "Phakwan"
+ PROV_ADJ4114: "Pakle"
+ PROV_ADJ4115: "Kohtral"
+ PROV_ADJ4116: "Nahrai"
+ PROV_ADJ4117: "Dongpai"
+ PROV_ADJ4118: "Le Rai"
+ PROV_ADJ4119: "Sivarv"
+ PROV_ADJ4120: "Daan That"
+ PROV_ADJ4121: "Truan"
+ PROV_ADJ4122: "Dong Sung"
+ PROV_ADJ4123: "Tha Pha"
+ PROV_ADJ4124: "Kahthin"
+ PROV_ADJ4125: "Phaa Praek"
+ PROV_ADJ4126: "Chum Thang"
+ PROV_ADJ4127: "Laem Pyak"
+ PROV_ADJ4128: "Na Laksi"
+ PROV_ADJ4129: "Mai Si Thong"
+ PROV_ADJ4130: "Khwan Rai"
+ PROV_ADJ4131: "Khao Lek"
+ PROV_ADJ4132: "Ang Paa"
+ PROV_ADJ4133: "Sae Hab"
+ PROV_ADJ4134: "Krajang"
+ PROV_ADJ4135: "Pongsikiao"
+ PROV_ADJ4136: "Korkejärvi"
+ PROV_ADJ4137: "Phu Kradok"
  PROV_ADJ4138: "4138"
- PROV_ADJ4139: "4139"
- PROV_ADJ4140: "4140"
- PROV_ADJ4141: "4141"
- PROV_ADJ4142: "4142"
- PROV_ADJ4143: "4143"
- PROV_ADJ4144: "4144"
- PROV_ADJ4145: "4145"
- PROV_ADJ4146: "4146"
- PROV_ADJ4147: "4147"
- PROV_ADJ4148: "4148"
- PROV_ADJ4149: "4149"
- PROV_ADJ4150: "4150"
- PROV_ADJ4151: "4151"
- PROV_ADJ4152: "4152"
- PROV_ADJ4153: "4153"
- PROV_ADJ4154: "4154"
- PROV_ADJ4155: "4155"
- PROV_ADJ4156: "4156"
- PROV_ADJ4157: "4157"
- PROV_ADJ4158: "4158"
- PROV_ADJ4159: "4159"
- PROV_ADJ4160: "4160"
- PROV_ADJ4161: "4161"
- PROV_ADJ4162: "4162"
- PROV_ADJ4163: "4163"
- PROV_ADJ4164: "4164"
- PROV_ADJ4165: "4165"
- PROV_ADJ4166: "4166"
- PROV_ADJ4167: "4167"
- PROV_ADJ4168: "4168"
+ PROV_ADJ4139: "Chiang Pho"
+ PROV_ADJ4140: "Baan Chao"
+ PROV_ADJ4141: "Wang Pho"
+ PROV_ADJ4142: "Khwan Prakhan"
+ PROV_ADJ4143: "Tha Chaa"
+ PROV_ADJ4144: "Phaen Pheun"
+ PROV_ADJ4145: "Phu Phasudtha"
+ PROV_ADJ4146: "Chong Phi"
+ PROV_ADJ4147: "Dong Xian"
+ PROV_ADJ4148: "Phaaprai"
+ PROV_ADJ4149: "Hat Bai Lai"
+ PROV_ADJ4150: "Thung Ma Laen"
+ PROV_ADJ4151: "Na Kwai"
+ PROV_ADJ4152: "Plaaswai"
+ PROV_ADJ4153: "Lehkmai"
+ PROV_ADJ4154: "Laichear"
+ PROV_ADJ4155: "Dukfu"
+ PROV_ADJ4156: "Chum Pu"
+ PROV_ADJ4157: "Tyttöjen Järviä"
+ PROV_ADJ4158: "Thung Kho"
+ PROV_ADJ4159: "Khlong Krabi"
+ PROV_ADJ4160: "Phu Thopha"
+ PROV_ADJ4161: "Na Kleua"
+ PROV_ADJ4162: "Rai Pret"
+ PROV_ADJ4163: "Pheun Naak"
+ PROV_ADJ4164: "Vua Ramhai"
+ PROV_ADJ4165: "La Quen"
+ PROV_ADJ4166: "Phan Kwean"
+ PROV_ADJ4167: "Na Bonpha"
+ PROV_ADJ4168: "Roi Fungvua"
  PROV_ADJ4169: "4169"
  PROV_ADJ4170: "4170"
  PROV_ADJ4171: "4171"
