--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4110,63 +4110,63 @@
  PROV4109: "4109"
  PROV4110: "Gapratikh"
  PROV4111: "Paskalampi"
- PROV4112: "4112"
- PROV4113: "4113"
- PROV4114: "4114"
- PROV4115: "4115"
- PROV4116: "4116"
- PROV4117: "4117"
- PROV4118: "4118"
- PROV4119: "4119"
- PROV4120: "4120"
- PROV4121: "4121"
- PROV4122: "4122"
- PROV4123: "4123"
- PROV4124: "4124"
- PROV4125: "4125"
- PROV4126: "4126"
- PROV4127: "4127"
- PROV4128: "4128"
- PROV4129: "4129"
- PROV4130: "4130"
- PROV4131: "4131"
- PROV4132: "4132"
- PROV4133: "4133"
- PROV4134: "4134"
- PROV4135: "4135"
+ PROV4112: "Phakwan"
+ PROV4113: "Pakle"
+ PROV4114: "Kohtral"
+ PROV4115: "Nahrai"
+ PROV4116: "Dongpai"
+ PROV4117: "Le Rai"
+ PROV4118: "Sivarv"
+ PROV4119: "Pa Mid"
+ PROV4120: "Daan That"
+ PROV4121: "Truan"
+ PROV4122: "Dong Sung"
+ PROV4123: "Tha Pha"
+ PROV4124: "Kahthin"
+ PROV4125: "Phaa Praek"
+ PROV4126: "Chum Thang"
+ PROV4127: "Laem Pyak"
+ PROV4128: "Na Laksi"
+ PROV4129: "Mai Si Thong"
+ PROV4130: "Khwan Rai"
+ PROV4131: "Khao Lek"
+ PROV4132: "Ang Paa"
+ PROV4133: "Sae Hab"
+ PROV4134: "Krajang"
+ PROV4135: "Pongsikiao"
  PROV4136: "Korkejärvi"
- PROV4137: "4137"
+ PROV4137: "Phu Kradok"
  PROV4138: "4138"
- PROV4139: "4139"
- PROV4140: "4140"
- PROV4141: "4141"
- PROV4142: "4142"
- PROV4143: "4143"
- PROV4144: "4144"
- PROV4145: "4145"
- PROV4146: "4146"
- PROV4147: "4147"
- PROV4148: "4148"
- PROV4149: "4149"
- PROV4150: "4150"
- PROV4151: "4151"
- PROV4152: "4152"
- PROV4153: "4153"
- PROV4154: "4154"
- PROV4155: "4155"
- PROV4156: "4156"
+ PROV4139: "Chiang Pho"
+ PROV4140: "Baan Chao"
+ PROV4141: "Wang Pho"
+ PROV4142: "Khwan Prakhan"
+ PROV4143: "Tha Chaa"
+ PROV4144: "Phaen Pheun"
+ PROV4145: "Phu Phasudtha"
+ PROV4146: "Chong Phi"
+ PROV4147: "Dong Xian"
+ PROV4148: "Phaaprai"
+ PROV4149: "Hat Bai Lai"
+ PROV4150: "Thung Ma Laen"
+ PROV4151: "Na Kwai"
+ PROV4152: "Plaaswai"
+ PROV4153: "Lehkmai"
+ PROV4154: "Laichear"
+ PROV4155: "Dukfu"
+ PROV4156: "Chum Pu"
  PROV4157: "Tyttöjen Järviä"
- PROV4158: "4158"
- PROV4159: "4159"
- PROV4160: "4160"
- PROV4161: "4161"
- PROV4162: "4162"
- PROV4163: "4163"
- PROV4164: "4164"
+ PROV4158: "Thung Kho"
+ PROV4159: "Khlong Krabi"
+ PROV4160: "Phu Thopha"
+ PROV4161: "Na Kleua"
+ PROV4162: "Rai Pret"
+ PROV4163: "Pheun Naak"
+ PROV4164: "Vua Ramhai"
  PROV4165: "La Quen"
- PROV4166: "4166"
- PROV4167: "4167"
- PROV4168: "4168"
+ PROV4166: "Phan Kwean"
+ PROV4167: "Na Bonpha"
+ PROV4168: "Roi Fungvua"
  PROV4169: "Thap Cang"
  PROV4170: "Nui Nhur"
  PROV4171: "Na Cung Dien"
