--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -413,6 +413,8 @@
  luetan: "Luetan"
  daimin: "Daimin"
  hai: "Hai"
+ fung: "Fung"
+ chengu: "Chengu"
 
  sarvini_group: "Sarvini"
  khapada: "Khapada"
