--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1642,3 +1642,13 @@
  MIK_ADJ: "Miekhokian"
  GOE: "Goe"
  GOE_ADJ: "Goe"
+ KEN: "Kenishe"
+ KEN_ADJ: "Kenishean"
+ SAT: "Sata"
+ SAT_ADJ: "Satan"
+ TOL: "Tolgoin"
+ TOL_ADJ: "Tolgoinian"
+ KHG: "Khaguulakh"
+ KHG_ADJ: "Khaguulakhi"
+ SES: "Seshme"
+ SES_ADJ: "Seshmean"
