--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -19,9 +19,9 @@
  huangche_regime_reform: "Huangche Regime"
  huangche_regime_reform_desc: "People of Huangche maintain high control over their population to keep everything in order."
  hengtuan_autocracy_reform: "Hengtuan Autocracy"
- hengtuan_autocracy_reform_desc: "This government is characterized by absolute rule of one person, following the doctrines of Danshu school of thought."
+ hengtuan_autocracy_reform_desc: "Danshu philosophy, which encourages hierarchical rule with a single Zhuquan at the top, found a fertile ground in various power hungry warlords of the east, easing the consolidation of power."
  luetan_monarchy_reform: "Luetan Monarchy"
- luetan_monarchy_reform_desc: "This governments is heavily influenced by Taowang philosophy and Tsutan believes in greatness of nature and human ecosystem, trying to keep it intact."
+ luetan_monarchy_reform_desc: "This governments is heavily influenced by Taowang philosophy and Tsutan believes in greatness of natural ecosystem. Rulers often are expected to keep and steward the realm in accordance with nature."
  beidao_alliance_reform: "Beidao Alliance"
  beidao_alliance_reform_desc: "Cities of northern Henling formed a tight alliance with a single electable leader to protect against northern hordes and southern regimes."
  tszelapsheng_reform: "Tshelapsheng"
