--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -130,8 +130,8 @@
  shaantin_mountain: "Mount Shaantin"
  shaantin_mountain_desc: " "
  
- ancient_merhaan_site: "Place of Merhaan"
- ancient_merhaan_site_desc: "According to all shamans of Merhaan, old tree that gave life to all humans was here. In these times it works as a spiritual capital for all people of Merhaan faith."
+ ancient_merhaan_site: "Merhaanic Roots"
+ ancient_merhaan_site_desc: "According to the shamans and scholars of Merhaan, the ancient tree that gave life to humanity grew in the heart of eastern steppe. In these times this site functions as a spiritual capital for all followers of the Merhaanic faith."
 
  bhaithar_castle: "Bhaithar Castle"
  bhaithar_castle_desc: "While not particularly interesting, the city surrounding the castle is a bustling center of Dorchean isles influencing not only the region, but the whole north."
