--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3797,7 +3797,7 @@
  PROV3796: "Central Aitu Sea"
  PROV3797: "Sakihama"
  PROV3798: "Maguroshima"
- PROV3799: "Hylkeidenjärvi Coast"
+ PROV3799: "3799"
  PROV3800: "Teibokusan"
  PROV3801: "Soshima"
  PROV3802: "Kitashi"
